tomdougiamas/static/css/tomdougiamas.scss
@import "variables";

html {
  background: #000;
  overflow-y: scroll;
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */

  padding-bottom: 2rem;
}

html::-webkit-scrollbar {
  width: 0;
  height: 0;
}

body {
  font-family: sans-serif;
  color: #ffffff;
  margin: 0;

  scroll-behavior: smooth
}

a {
  color: #7777FF;
  text-decoration: none;
}

code {
  display: inline;
  background-color: #222222;
  padding: 0.1rem;
  border-radius: 0.25rem;
}

.landing-header {
  display: flex;
  flex-flow: column;
  justify-content: space-evenly;
  align-content: center;
  align-items: center;

  margin: auto;
  height: 100vh;
  width: 100vw;
}

.landing-header .text-wrapper {
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.landing-header h1 {
  @extend .gradient-text;
  background: $gradient-header;
  animation: text-background 10s ease infinite;
  background-size: 400% 400%;
  font-size: 5rem;
  margin: 2rem 0;
}

.shorten-header {
  margin-top: 2.5vh;
  height: 35vh;
  width: 80%;
  margin-bottom: 2.5vh;
}

/* Down arrow */
.down-arrow {
  width: 2rem;
  height: 2rem;

  cursor: pointer;
  transition: transform 0.2s;
}

.down-arrow:hover {
  transform: scale(1.5);
}

.showcase {
  display: flex;
  flex-flow: column wrap;
  align-content: center;

  box-sizing: border-box;
  width: 100vw;
  padding: 2rem;
}

.showcase > div {
  display: flex;
  flex-flow: column;
  align-items: flex-start;
}

.showcase > div > h2 {
  @extend .gradient-text;
  background: $gradient-header;

  width: 100%;
  font-size: 2.5rem;

}

.showcase > div > p, pre {
  overflow-wrap: break-word;
  max-width: 60rem;
  font-size: 1.2rem;
  margin: 1rem 5rem;
}

.showcase > div > p > pre {
  margin: 0;
}

.error-message {
  text-align: center;

  text-transform: capitalize;
  font-weight: bold;
  font-size: 1.2rem;
  color: #ff4444;
}

